base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: people-api
  namespace: people
spec:
  replicas: 1
  selector:
    matchLabels: { app: people-api }
  template:
    metadata:
      labels: { app: people-api }
    spec:
      containers:
        - name: api
          image: REPLACE_ECR_URL/people-api:TAG
          ports:
            - containerPort: 8000
