base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: people-api
  namespace: people
spec:
  type: LoadBalancer
  selector:
    app: people-api
  ports:
    - port: 80
      targetPort: 8000
